@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.962 2008-12-03 08:40:04 castaglia Exp $
+$Id: NEWS,v 1.963 2008-12-04 21:45:58 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -16,6 +16,8 @@ CVS
 - Bug 1636 - GroupRatio does not check user's supplemental group membership.
 - Bug 3137 - ProFTPD does not log filename %f for uploaded files.
 - Bug 3142 - "Invalid number of arguments MFMT" due to spaces in path argument.
+- Bug 3144 - mod_dynmasq returns same IP address, even though actual IP
+  address has changed.
 
 1.3.2rc3 - Released 20-Nov-2008
 --------------------------------
